<resources>
    <string name="app_name">GraTerenowa</string>
    <string name="title_activity_login">Zaloguj się</string>
    <string name="prompt_email">Nickname</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="register">Zarejestruj się</string>
    <string name="password">Hasło</string>
    <string name="regul">Regulamin</string>
    <string name="password_return">Powtórz Hasło</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_game_setup">Map</string>
    <string name="title_activity_game">Map</string>
    <string name="title_activity_summary">Podsumowanie</string>
    <string name="title_activity_game_navigation">GameNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_view_game">ViewGame</string>
    <string name="title_activity_map">Map</string>
    <string name="setChooseText">Wybierz zestaw</string>
    <string name="findClosest">Znajdź najbliższy</string>
    <string name="startGame">Rozpocznij grę</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="game_sets">
        <item>Politechnika Warszawska</item>
        <item>Pole Mokotowskie</item>
    </string-array>
    <string name="Pole_Mokotowskie_set">
{
  "type": "FeatureCollection",
  "features": [
    {
      "type": "Feature",
      "geometry": {
        "type": "Point",
        "coordinates": [
          20.98893558607392,
          52.210876129664584
        ]
      },
      "properties": {
        "name": "Flaga_USA",
        "quest": "Gwiazdy_na_górze_również_w_dzień"
      }
    },
    {
      "type": "Feature",
      "geometry": {
        "type": "Point",
        "coordinates": [
          20.994046155114233,
          52.21132852210809
        ]
      },
      "properties": {
        "name": "Pomnik_szczęśliwego_psa",
        "quest": "Spiżowy_druh"
      }
    },
    {
      "type": "Feature",
      "geometry": {
        "type": "Point",
        "coordinates": [
          20.99770681511677,
          52.21204511161503
        ]
      },
      "properties": {
        "name": "Rondo_rowerowe",
        "quest": "Kółko_dla_dwóch_kółek"
      }
    },
    {
      "type": "Feature",
      "geometry": {
        "type": "Point",
        "coordinates": [
          20.997807349882578,
          52.210472199073635
        ]
      },
      "properties": {
        "name": "Pomnik_lotniska",
        "quest": "Latający_kamień_na_końcu_drogi"
      }
    },
    {
      "type": "Feature",
      "geometry": {
        "type": "Point",
        "coordinates": [
          20.997443909977505,
          52.210782008569375
        ]
      },
      "properties": {
        "name": "Przepust",
        "quest": "Trawa_nad_wodą"
      }
    },
    {
      "type": "Feature",
      "geometry": {
        "type": "Point",
        "coordinates": [
          20.998382683132718,
          52.21056670352547
        ]
      },
      "properties": {
        "name": "Veturilko",
        "quest": "Zabawka_na_dwadzieścia_minut_za_darmo"
      }
    },
    {
      "type": "Feature",
      "geometry": {
        "type": "Point",
        "coordinates": [
          21.004006331035498,
          52.21306846004457
        ]
      },
      "properties": {
        "name": "Krąg_megalityczny",
        "quest": "Kalendarz_niczym_ze_wzgórz_angielskich"
      }
    },
    {
      "type": "Feature",
      "geometry": {
        "type": "Point",
        "coordinates": [
          21.005858062228754,
          52.212966297844375
        ]
      },
      "properties": {
        "name": "Kładka",
        "quest": "U_podnóży_schodów$_ale_nie_będziesz_potrącony"
      }
    },
    {
      "type": "Feature",
      "geometry": {
        "type": "Point",
        "coordinates": [
          20.991489973247667,
          52.211719581520846
        ]
      },
      "properties": {
        "name": "Kuźnia_Golfa",
        "quest": "Młoty_na_kije"
      }
    },
    {
      "type": "Feature",
      "geometry": {
        "type": "Point",
        "coordinates": [
          21.00045855794872,
          52.21186908511815
        ]
      },
      "properties": {
        "name": "Skrzyżowanie_na_wyspie",
        "quest": "Cztery_drogi$_każda_przez_wodę"
      }
    },
    {
      "type": "Feature",
      "geometry": {
        "type": "Polygon",
        "coordinates": [
          [
            [
              20.98836858277832,
              52.21170832603342
            ],
            [
              20.98766047959839,
              52.209512540136664
            ],
            [
              20.997037482314454,
              52.20735609387363
            ],
            [
              20.998711180739747,
              52.20719830101324
            ],
            [
              20.998432231002198,
              52.20886824703456
            ],
            [
              21.00113589768921,
              52.20960458124568
            ],
            [
              21.00701565749432,
              52.21061069666112
            ],
            [
              21.00577111251141,
              52.215107228202434
            ],
            [
              20.997209501335874,
              52.213779352504346
            ],
            [
              20.993668985436216,
              52.21305623518299
            ],
            [
              20.988943046254576,
              52.212227908311235
            ],
            [
              20.98836858277832,
              52.21170832603342
            ]
          ]
        ]
      },
      "properties": {
          "name":"range"
       }
    }
  ]
}
    </string>
  <string name="points">Punkty</string>
  <string name="gameTime">Czas Gry</string>
  <string name="seeTasks">Zobacz Zadania</string>
  <string name="pointsLook">Punktów za skończenie teraz:</string>
  <string name="backToMap">Wróć do mapy</string>
  <string name="endGame">Zakończ grę</string>
  <string name="CommissionsNumberText">Zgłoszono tyle razy:</string>
  <string name="good_answer">Dobra odpowiedź do klucza:</string>
  <string name="means">Czyli:</string>
  <string name="correct_explain">Otrzymujesz 5000 punktów</string>
  <string name="bad_answer">Zła odpowiedź do klucza:</string>
  <string name="bad_explain1">Tracisz 1000 punktów</string>
  <string name="bad_explain2">Tym razem nie tracisz punktów, ale za każde następne złe zgłoszenie dla tego klucza stracisz 1000 punktów</string>
  <string name="regulamin">Celem gry jest odgadniecię 10-ciu zagadek przedstawiających obiekt położony na danym terenie. Zakres obszaru na którym znajdują się ukrytne
    pod zagadką elementy masz zaznaczony na mapie podczas wybierania zestawu zadań. Po rozpoczęciu gry liczony jest ci czas, podczas którego co sekundę tracisz jeden punkt.
    Na starcie masz 3600 punktów<b>Postaraj się aby nie spadło ci do zera!</b> Za każdą poprawną odpowiedź otrzymujesz 5000 punktów. Za pierwszą błędną odpowiedź nie tracisz żadnych,
    ale za każdą kolejną dla danego punktu tracisz zawsze po 1000! Zakończyć grę możesz w każdej chwili. Klikając przycisk zakończ. Zostaniesz poinformowany wtedy o ilości zdobych punktów,
    a twój wynik zapisze się w zakładce "Najlepsze Wyniki" na stosownej pozycji. Jeśli chesz zmienić zestaw, możesz w każdej chwili powrócić do menu wyborów zestawów.
    <b>Pamiętaj tylko, że tracisz dotychczasowe osiągnięcia i wybrany ponownie zestaw musisz zaczynać od zera!</b><br/>
    <p align="center">POWODZENIA!!!</p>
  </string>
</resources>