<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.graterenowa.graterenowa.MapsActivity">

    <fragment
        android:id="@+id/gameMap"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_above="@+id/commissionButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/pointsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gameSetLabel"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/points" />

    <TextView
        android:id="@+id/pointsView"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/pointsLabel"
        android:layout_alignStart="@+id/pointsLabel"
        android:layout_below="@+id/pointsLabel"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pointsLabel"
        android:layout_alignBottom="@+id/pointsLabel"
        android:layout_alignEnd="@+id/pointsTotalView"
        android:layout_alignRight="@+id/pointsTotalView"
        android:text="@string/gameTime" />

    <TextView
        android:id="@+id/gameSetLabel"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/commissionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/seeTasks" />

    <TextView
        android:id="@+id/pointsTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pointsView"
        android:layout_alignStart="@+id/pointsView"
        android:layout_below="@+id/pointsView"
        android:layout_marginTop="17dp"
        android:text="@string/pointsLook" />

    <TextView
        android:id="@+id/pointsTotalView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pointsTotalLabel"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/pointsTotalLabel"
        android:layout_toRightOf="@+id/pointsTotalLabel"
        android:text="" />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/pointsTotalView"
        android:layout_alignStart="@+id/pointsTotalView"
        android:layout_below="@+id/timeLabel" />

</RelativeLayout>
